--- a/config/.config
+++ b/config/.config
@@ -343,6 +343,7 @@ CONFIG_KERNEL_DEBUG_INFO_REDUCED=y
 CONFIG_KERNEL_FRAME_WARN=2048
 # CONFIG_KERNEL_DEBUG_VIRTUAL is not set
 CONFIG_KERNEL_DYNAMIC_DEBUG=y
+CONFIG_MT76_DEBUG=y
 # CONFIG_KERNEL_KPROBES is not set
 # CONFIG_KERNEL_BPF_EVENTS is not set
 CONFIG_KERNEL_AIO=y
